Silence all warnings

--- a/autorizacion.tex
+++ b/autorizacion.tex
@@ -18,4 +18,4 @@
 
 \end{center}
 
-El/la abajo firmante, matriculado/a en el Máster en Investigación en Informática de la Facultad de Informática, autoriza a la Universidad Complutense de Madrid (UCM) a difundir y utilizar con fines académicos, no comerciales y mencionando expresamente a su autor el presente Trabajo Fin de Máster: “OPTIBAT: OPTIMIZACIÓN DE BATERÍAS EN EL MERCADO ELÉCTRICO”, realizado durante el curso académico 2024--2025 bajo la dirección de Francisco Daniel Igual Peña y Luis Piñuel Moreno en el Departamento de Informática, y a la Biblioteca de la UCM a depositarlo en el Archivo Institucional E-Prints Complutense con el objeto de incrementar la difusión, uso e impacto del trabajo en Internet y garantizar su preservación y acceso a largo plazo.
+El/la abajo firmante, matriculado/a en el Máster en Investigación en Informática de la Facultad de Informática, autoriza a la Universidad Complutense de Madrid (UCM) a difundir y utilizar con fines académicos, no comerciales y mencionando expresamente a su autor el presente Trabajo Fin de Máster: “OPTIBAT\@: OPTIMIZACIÓN DE BATERÍAS EN EL MERCADO ELÉCTRICO”, realizado durante el curso académico 2024--2025 bajo la dirección de Francisco Daniel Igual Peña y Luis Piñuel Moreno en el Departamento de Informática, y a la Biblioteca de la UCM a depositarlo en el Archivo Institucional E-Prints Complutense con el objeto de incrementar la difusión, uso e impacto del trabajo en Internet y garantizar su preservación y acceso a largo plazo.
