--- a/chapter10.tex
+++ b/chapter10.tex
@@ -1,8 +1,8 @@
-\cleardoublepage
+\cleardoublepage%
 
-\chapter*{Conclusions and future work}
-\addcontentsline{toc}{chapter}{Introduction}
+\chapter*{Conclusions and future work}%
 \label{makereference10}
+\addcontentsline{toc}{chapter}{Introduction}
 
 \section*{Conclusions}
 
