--- a/principal.tex
+++ b/principal.tex
@@ -31,7 +31,7 @@
 \definecolor{Pink}{rgb}{1.0, 0.5, 0.5}
 \definecolor{Maroon}{rgb}{0.8, 0.0, 0.0}
 
-\hypersetup{
+\hypersetup{%
   linktocpage=true,
   colorlinks=true,
   citecolor=blue,
@@ -46,7 +46,7 @@
 \bibpunct{}{}{,}{s}{}{}
 
 \input{acronyms.tex}
-\makeglossaries
+\makeglossaries%
 
 \begin{document}
 
@@ -67,7 +67,7 @@
 \pagenumbering{roman}
 \setcounter{page}{1}
 
-\phantomsection
+\phantomsection%
 \addcontentsline{toc}{chapter}{Índice}
 
 \tableofcontents
