--- a/references.bib
+++ b/references.bib
@@ -11,7 +11,7 @@
   author = {Apple},
   url    = {https://www.apple.com/es/batteries/why-lithium-ion/},
   year   = {2025},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{aveva2025aveva,
@@ -143,7 +143,7 @@
   author = {EcoAvant},
   url    = {https://www.ecoavant.com/consumo/precio-luz-marca-nuevo-maximo-historico-todo-excepcion-iberica_9229_102.html},
   year   = {2022},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{enspired2025battery,
@@ -167,7 +167,7 @@
   author = {G-Advisory},
   url    = {https://www.asealen.es/wp-content/uploads/2023/02/20230217-Conclusions-Technical-and-economic-study-of-two-energy-storage-technologies-in-Spain_G-advisory-Simulyde.pdf},
   year   = {2023},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{gallo2023stand,
@@ -370,7 +370,7 @@
   author = {Pedro Iván Leal Jáuregui},
   url    = {https://dexterenergy.ai/news/bess-trading-the-case-for-cross-market-optimization/},
   year   = {2025},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @article{liu2022milp,
@@ -446,7 +446,7 @@
   author = {Nord Pool},
   url    = {https://www.nordpoolgroup.com/en/},
   year   = {2025},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{omie2025acceso,
@@ -500,7 +500,7 @@
   author = {Pyomo Development Team},
   url    = {https://www.pyomo.org/},
   year   = {2025},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @article{rancilio2022revenue,
@@ -568,7 +568,7 @@
   author = {Streamlit},
   url    = {https://streamlit.io/},
   year   = {2025},
-  note   = {Accessed: 2025-09-05}
+  note   = {Accedido: 2025-09-05}
 }
 
 @misc{sunkko2025two,
